argocd/infra/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-micronout-deploy
  namespace: labs
  labels:
    projeto: projeto-1
    app: app-micronout
    stack: micronaut
    team: devops
    env: lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "app-micronout"
  template:
    metadata:
      labels:
        projeto: projeto-1
        app: app-micronout
        stack: micronaut
        team: devops
        env: lab
    spec:
      containers:
        - name: app-micronout
          image: ewr.vultrcr.com/kuberneteslabcontainerregistry/kubernetes-labs-app-micronout:develop
          imagePullPolicy: Always
          resources:
            limits:
              memory: "800Mi"
              cpu: "500m"
            requests:
              memory: "400Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: app-micronout-service
  namespace: labs
  labels:
    app: app-micronout
    component: api
    projeto: projeto-1
    team: devops
    env: lab
spec:
  selector:
    app: app-micronout
  ports:
    - name: http
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labs-ingress
  namespace: labs
  labels:
    app: labs-ingress
    projeto: projeto-1
    team: devops
    env: lab
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    service.beta.kubernetes.io/vultr-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/vultr-loadbalancer-label: "labs-ingress-lb"
    service.beta.kubernetes.io/vultr-loadbalancer-algorithm: "least_connections"
    service.beta.kubernetes.io/vultr-loadbalancer-healthcheck-path: "/health"
    service.beta.kubernetes.io/vultr-loadbalancer-healthcheck-check-interval: "5"
    service.beta.kubernetes.io/vultr-loadbalancer-healthcheck-response-timeout: "3"
    service.beta.kubernetes.io/vultr-loadbalancer-healthcheck-unhealthy-threshold: "3"
    service.beta.kubernetes.io/vultr-loadbalancer-healthcheck-healthy-threshold: "2"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - secretName: labs-tls
      hosts:
        - labs.nercode.com.br
  rules:
    - host: labs.nercode.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-micronout-service
                port:
                  number: 80
